[package]
authors = ["Alex Anderson <anderson.alexj@gmail.com>"]
edition = "2018"
name = "rstdms"
version = "0.2.0"

[dependencies]
bitflags = "*"
byteorder = "1.3.1"
# charts = "0.3.0"
eframe = "*"
flexi_logger = "^0.13.2"
indexmap = "*"
log = "0.4"
num = "0.2.0"
num-derive = "0.2"
num-traits = "0.2"
rfd = "0.4.3"
